--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,18 +8,36 @@
     margin: 0;
 }
 
+/* Collective Font Formatting */
+nav,
+.footer {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+nav header,
+.service-item,
+.benefits {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+nav header,
+.footer h2 {
+    font-size: 20px;
+}
+
+
 /*********** <body> ***********/
 
 body {
     background-color: #d9dcd6;
 }
 
+
     /*********** <nav> ***********/
 
     nav {
         padding: 20px;
         background-color: #2a607c;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         color: #ffffff;
     }
 
@@ -37,8 +55,6 @@ body {
         padding-top: 15px;
         margin-right: 20px;
         float: right;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 20px;
     }
 
     ul {
@@ -85,7 +101,6 @@ body {
             margin-bottom: 20px;
             padding: 50px;
             height: 300px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             background-color: #0072bb;
             color: #ffffff;
         }
@@ -119,7 +134,6 @@ body {
             float: right;
             width: 20%;
             height: 100%;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             background-color: #2589bd;
         }
 
@@ -145,10 +159,6 @@ body {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     }
 
-.footer h2 {
-    font-size: 20px;
-    }
